--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="stylepage.css">
     <link rel="stylesheet" href="stylehome.css">
-    <script src="blogmanager.js"></script>
+    <script type="module" src="blogmanager.js"></script>
   </head>
   <body>
     <div class="webhead" onClick="location.href='index.html';">
