--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,11 @@
           <a href="#" id="sixth-post">Sixth Post</a>
         </div>
       </div>
-      <div href="#" class="other-pages" id="thoughts-container">
-        <h2 class="block-head">Thoughts</h2>
+      <div href="#" class="other-pages" id="thoughts-container" onClick="location.href='thoughts.html';">
+        <h2 class="block-head side-head">Thoughts</h2>
       </div>
-      <div class="other-pages" onClick="location.href='projects.html';" id="projects-container">
-        <h2 class="block-head">Projects</h2>
+      <div class="other-pages" id="projects-container" onClick="location.href='projects.html';">
+        <h2 class="block-head side-head">Projects</h2>
       </div>
     </div>
   </body>
