blogs working! thoughts page working too!

--- a/public/blog.html
+++ b/public/blog.html
@@ -3,8 +3,8 @@
   <head>
     <title>Nyums Projects</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="stylepage.css">
-    <script type="module" src="blogpage.js"></script>
+    <link rel="stylesheet" href="styles/stylepage.css">
+    <script type="module" src="scripts/blog-content.js"></script>
   </head>
   <body>
     <div class="webhead" onClick="location.href='index.html';">
@@ -13,11 +13,10 @@
     </div>
     <div class="blog">
         <div class="blog-heading">
-            <h2 id="blog-title">Blog Title</h2>
-            <p id="blog-author">Blog Author</p>
+            <h2 id="blog-title"></h2>
+            <p id="blog-author"></p>
         </div>
         <div class="blog-body">
-            <p>akdadasdsadasdasd<br>wowowo</p>
         </div>
     </div>
   </body>
