--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Nyums: A Dev Blog</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="stylepage.css">
-    <link rel="stylesheet" href="stylehome.css">
-    <script type="module" src="blogmanager.js"></script>
+    <link rel="stylesheet" href="styles/stylepage.css">
+    <link rel="stylesheet" href="styles/stylehome.css">
+    <script type="module" src="scripts/home-recent.js"></script>
   </head>
   <body>
     <div class="webhead" onClick="location.href='index.html';">
