--- a/public/projects.html
+++ b/public/projects.html
@@ -3,7 +3,7 @@
   <head>
     <title>Nyums Projects</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="stylepage.css">
+    <link rel="stylesheet" href="styles/stylepage.css">
   </head>
   <body>
     <div class="webhead" onClick="location.href='index.html';">
