minor tweaks and cleaning

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div href="#" class="other-pages" id="thoughts-container" onClick="location.href='thoughts.html';">
-        <h2 class="block-head side-head">Thoughts</h2>
+        <h2 class="block-head side-head">All Posts</h2>
       </div>
       <div class="other-pages" id="projects-container" onClick="location.href='projects.html';">
         <h2 class="block-head side-head">Projects</h2>
