--- a/public/thoughts.html
+++ b/public/thoughts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
   <head>
-    <title>Nyums Projects</title>
+    <title>Nyums Blogs</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/stylepage.css">
     <link rel="stylesheet" href="styles/stylethoughts.css">
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="webhead" onClick="location.href='index.html';">
-      <img src="NyumsLogo.png" alt="Nyums Logo" class="logo">
+      <img src="styles/NyumsLogo.png" alt="Nyums Logo" class="logo">
       <h2>A Developer's Blog</h2>
     </div>
     <div class="recent-container">
