--- a/public/blog.html
+++ b/public/blog.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html> 
 <html>
   <head>
-    <title>Nyums Projects</title>
+    <title>Nyums Blog</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/stylepage.css">
     <script type="module" src="scripts/blog-content.js"></script>
   </head>
   <body>
     <div class="webhead" onClick="location.href='index.html';">
-      <img src="NyumsLogo.png" alt="Nyums Logo" class="logo">
+      <img src="styles/NyumsLogo.png" alt="Nyums Logo" class="logo">
       <h2>A Developer's Blog</h2>
     </div>
     <div class="blog">
