--- a/public/projects.html
+++ b/public/projects.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="webhead" onClick="location.href='index.html';">
-      <img src="NyumsLogo.png" alt="Nyums Logo" class="logo">
+      <img src="styles/NyumsLogo.png" alt="Nyums Logo" class="logo">
       <h2>A Developer's Blog</h2>
     </div>
   </body>
